Prevent scrollbar layout shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
   background-color: #d7edfe !important;
+
+  overflow-y: overlay;
 }
 
 a {
